--- a/Source/PaxSys.Pccms.ContestAdministration/Views/Contest/Index.cshtml
+++ b/Source/PaxSys.Pccms.ContestAdministration/Views/Contest/Index.cshtml
@@ -1,42 +1,31 @@
-﻿@model PaxSys.Pccms.ContestAdministration.Models.Basic.BasicContestViewModel[]
+﻿@model PaxSys.Pccms.ContestAdministration.Models.ContestViewModel[]
 
-<!DOCTYPE html>
+@Html.ActionLink("Create New Contest", "AddContest", new {}, new {@class = "btn btn-sm btn-info"})
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-
-<body>
-    <div class="container">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>Description</th>
-                <th>ContestDate</th>
-                <th>IsOver</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.Id</td>
-                        <td>@item.Description</td>
-                        <td>@item.ContestDate</td>
-                        <td>@item.IsOver</td>
-                        <td>
-                            @Html.ActionLink("Details", "Details",
-                                new { id = item.Id },
-                                new {@class = "btn btn-sm btn-info"})
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Description</th>
+        <th>ContestDate</th>
+        <th>IsOver</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.Description</td>
+            <td>@item.Date</td>
+            <td>@item.IsOver</td>
+            <td>
+                @Html.ActionLink("Details", "Details",
+                    new { id = item.Id },
+                    new {@class = "btn btn-sm btn-info"})
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
